Fix #282 - add USF to carshare in layers widget, and adjust min width of layers to prevent wrapping on mobile

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -675,7 +675,7 @@ div#otp-planner-optionsWidget-scollPanel {
 /* Layer widget */
 .otp-layerView { 
 	width:40%;
-	min-width: 160px;
+	min-width: 195px;
 	max-width: 200px;
 	min-height:100px;
 	background-color: white;
